dav/dav2/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
  namespace: davtrowebdb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: website.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-db-argocd-kustomize-kyverno-grafana-loki-tempo
            port:
              number: 80
